--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 /* This container is needed to position the front and back side */
 .flip-card-inner {
-  position: relative;
+  position: fixed;
   width: 100%;
   height: 100%;
   text-align: center;
@@ -24,7 +24,7 @@
 
 /* Position the front and back side */
 .flip-card-front, .flip-card-back {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   -webkit-backface-visibility: hidden; /* Safari */
