--- a/style.css
+++ b/style.css
@@ -1,45 +1,51 @@
-/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
-.flip-card {
-  background-color: transparent;
-  width: 300px;
-  height: 200px;
-  border: 1px solid #f1f1f1;
-  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+/* ::: HOLDER, CARD, FACES */
+.holder {
+  display:     inline-block;
+  width:       64px;
+  height:      64px;
+  perspective: 700px;
+}
+.card, .front, .back{
+  position:   absolute;
+  height:     inherit;
+  width:      inherit;
+  transition: all .7s;
+  transform-style:     preserve-3d;
+  backface-visibility: visible;
 }
 
-/* This container is needed to position the front and back side */
-.flip-card-inner {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
-}
+/* ::: FACES */
+.front{background: tomato;}
+.back{background:  slategray;}
 
-/* Do an horizontal flip when you move the mouse over the flip box container */
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
+/* ::: SETUP FACES */
+.flipH .back{transform: rotateY(-180deg);}
+.flipV .back{transform: rotateX(180deg);}
 
-/* Position the front and back side */
-.flip-card-front, .flip-card-back {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden; /* Safari */
-  backface-visibility: hidden;
-}
+/* ::: HOVER EFFECTS (Remove Automated for this to work) */
+.flipH:hover .card{ transform: rotateY(180deg); }
+.flipV:hover .card{ transform: rotateX(-180deg); }
 
-/* Style the front side (fallback if image is missing) */
-.flip-card-front {
-  background-color: #bbb;
-  color: black;
+/* ::: AUTOMATED EFFECTS */
+.flipH .card{
+  animation: flipH 2s 0s infinite alternate ease-in-out;
 }
-
-/* Style the back side */
-.flip-card-back {
-  background-color: dodgerblue;
-  color: white;
-  transform: rotateY(180deg);
+.flipV .card{
+  animation: flipV 2s 0s infinite alternate ease-in-out;
+}
+@keyframes flipH {
+  0% { transform: rotateY(0deg); }
+  100% { transform: rotateY(-180deg); }
+}
+@-webkit-keyframes flipH {
+  0% { transform: rotateY(0deg); }
+  100% { transform: rotateY(-180deg); }
+}
+@keyframes flipV {
+  0% { transform: rotateX(0deg); }
+  100% { transform: rotateX(-180deg); }
+}
+@-webkit-keyframes flipV {
+  0% { transform: rotateX(0deg); }
+  100% { transform: rotateX(-180deg); }
 }
