--- a/style.css
+++ b/style.css
@@ -1,124 +1,51 @@
-@import url('https://fonts.googleapis.com/css?family=Cantata+One');
-@import url('https://fonts.googleapis.com/css?family=Lato');
-
-html {
-  box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
-}
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
+@import 'https://fonts.googleapis.com/css?family=Lily+Script+One';
 body {
-  background-color: #bdc2e8;
-  background-image: linear-gradient(to top, #bdc2e8 0%, #bdc2e8 1%, #e6dee9 100%);
-  background-repeat: no-repeat;
-}
-
-/* CARD STYLING */
-
-.container,
-.card,
-.card_front,
-.card_back {
-  width: 397px;
-  height: 640px;
-  margin: 3em auto;  
-}
-
-.card_front,
-.card_back {  
-/*   height: 100%; */
-  background: url('http://i280.photobucket.com/albums/kk195/thelittleblacksmith/lobster-nebula_zps2j1cvbkx.jpg') no-repeat;
-  box-shadow: 0px 5px 25px 0px rgba(51,51,51,0.28); 
-}
-
-.card-symbol {
-  margin: 0;
-  width: 100%;
-  text-align: center;
-  color: #000;
-  font-family: 'Cantata One', serif;
-  font-size: 13em;  
-  mix-blend-mode: lighten;
-}
-
-@supports(display:flex){
- .card_front {  
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  } 
-  
-  .card_front .card-symbol {  
-    margin: 0 0.15em;
-    border-radius: 50%;
-    font-size: 15em;  
-  }
-}
-
-.card_front {
-  position: relative;
-  padding: 0 1em;
-}
-
-.card_front .card-symbol {    
-  font-size: 15em;  
-}
-
-
-
-.card_back {
-/*   display: none; */
-  padding: 1em;
-}
-
-.card_front > *,
-.card_back > * {
-  background-color: white;
-  background-color: rgba(255, 255, 255, 0.75);  
-}
-
-.card-text {
-  padding: 0 4.5em 1em;
-  line-height: 1.4;
-}
-
-p:first-of-type {    
-  margin-top: 0;
-  padding: 1.5em 0 0;
-  border-top: 8px solid #333;
-}
-
-/* FLIP CARD STYLING */
-.container {
-  perspective: 1000px;
-}
-
-.container:hover .card, 
-.container.hover {
-  transform: rotateY(-180deg);
+  background: #eee;
+  font-family: 'Lily Script One';
 }
 
 .card {
-  transition: 0.6s;
-  transform-style: preserve-3d;
-  position: relative;
-}
-
-.card_front,
-.card_back {
-  backface-visibility: hidden;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  width: 300px;
+  height: 300px;
+  margin: -150px;
+  float: left;
+  perspective: 500px;
 }
 
-.card_front {
-  z-index: 2;
-  transform: rotateY(0deg);
+.content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 0 15px rgba(0,0,0,0.1);
+
+  transition: transform 1s;
+  transform-style: preserve-3d;
 }
 
-.card_back {
-  transform: rotateY(-180deg);
+.card:hover .content {
+  transform: rotateY( 180deg ) ;
+  transition: transform 0.5s;
+}
+
+.front,
+.back {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: white;
+  line-height: 300px;
+  color: #03446A;
+  text-align: center;
+  font-size: 60px;
+  border-radius: 5px;
+  backface-visibility: hidden;
+}
+
+.back {
+  background: #03446A;
+  color: white;
+  transform: rotateY( 180deg );
 }
