--- a/style.css
+++ b/style.css
@@ -33,13 +33,13 @@
 
 /* Style the front side (fallback if image is missing) */
 .flip-card-front {
-  background-color: #bbb;
+  background-color: none;
   color: black;
 }
 
 /* Style the back side */
 .flip-card-back {
-  background-color: dodgerblue;
+  background-color: none;
   color: white;
   transform: rotateY(180deg);
 }
