--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@
 
 /* This container is needed to position the front and back side */
 .flip-card-inner {
-  position: relative;
+  position: fixed;
   width: 100%;
   height: 100%;
   text-align: center;
   transition: transform 0.8s;
-  transform-style: preserve-3d;
+  transform-style: flat;
 }
 
 /* Do an horizontal flip when you move the mouse over the flip box container */
@@ -24,7 +24,7 @@
 
 /* Position the front and back side */
 .flip-card-front, .flip-card-back {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   -webkit-backface-visibility: hidden; /* Safari */
