--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   width: 300px;
   height: 200px;
   border: 1px solid #f1f1f1;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
 }
 
 /* This container is needed to position the front and back side */
@@ -11,7 +12,6 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  text-align: center;
   transition: transform 0.8s;
   transform-style: flat;
 }
