--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 /* This container is needed to position the front and back side */
 .flip-card-inner {
-  position: fixed;
+  position: relative;
   width: 100%;
   height: 100%;
   transition: transform 0.8s;
@@ -23,7 +23,7 @@
 
 /* Position the front and back side */
 .flip-card-front, .flip-card-back {
-  position: fixed;
+  position: absolute;
   width: 100%;
   height: 100%;
   -webkit-backface-visibility: hidden; /* Safari */
