--- a/style.css
+++ b/style.css
@@ -12,8 +12,9 @@
   position: relative;
   width: 100%;
   height: 100%;
+  text-align: center;
   transition: transform 0.8s;
-  transform-style: flat;
+  transform-style: preserve-3d;
 }
 
 /* Do an horizontal flip when you move the mouse over the flip box container */
@@ -32,13 +33,13 @@
 
 /* Style the front side (fallback if image is missing) */
 .flip-card-front {
-  background-color: none;
+  background-color: #bbb;
   color: black;
 }
 
 /* Style the back side */
 .flip-card-back {
-  background-color: none;
+  background-color: dodgerblue;
   color: white;
   transform: rotateY(180deg);
 }
