--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
 }
 
-/* This container is needed to position the front and back side */ 
+/* This container is needed to position the front and back side */
 .flip-card-inner {
   position: relative;
   width: 100%;
@@ -33,13 +33,13 @@
 
 /* Style the front side (fallback if image is missing) */
 .flip-card-front {
-  background-color: none !important;
+  background-color: #bbb;
   color: black;
 }
 
 /* Style the back side */
 .flip-card-back {
-  background-color: none !important;
+  background-color: dodgerblue;
   color: white;
   transform: rotateY(180deg);
 }
