--- a/style.css
+++ b/style.css
@@ -1,44 +1,124 @@
-/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
-.flip-card {
-  background-color: transparent;
-  width: 300px;
-  height: 200px;
-  border: 1px solid #f1f1f1;
-  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+@import url('https://fonts.googleapis.com/css?family=Cantata+One');
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
+html {
+  box-sizing: border-box;
+  font-family: 'Lato', sans-serif;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
-/* This container is needed to position the front and back side */
-.flip-card-inner {
-  position: relative;
+body {
+  background-color: #bdc2e8;
+  background-image: linear-gradient(to top, #bdc2e8 0%, #bdc2e8 1%, #e6dee9 100%);
+  background-repeat: no-repeat;
+}
+
+/* CARD STYLING */
+
+.container,
+.card,
+.card_front,
+.card_back {
+  width: 397px;
+  height: 640px;
+  margin: 3em auto;  
+}
+
+.card_front,
+.card_back {  
+/*   height: 100%; */
+  background: url('http://i280.photobucket.com/albums/kk195/thelittleblacksmith/lobster-nebula_zps2j1cvbkx.jpg') no-repeat;
+  box-shadow: 0px 5px 25px 0px rgba(51,51,51,0.28); 
+}
+
+.card-symbol {
+  margin: 0;
   width: 100%;
-  height: 100%;
   text-align: center;
-  transition: transform 0.8s;
+  color: #000;
+  font-family: 'Cantata One', serif;
+  font-size: 13em;  
+  mix-blend-mode: lighten;
+}
+
+@supports(display:flex){
+ .card_front {  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  } 
+  
+  .card_front .card-symbol {  
+    margin: 0 0.15em;
+    border-radius: 50%;
+    font-size: 15em;  
+  }
+}
+
+.card_front {
+  position: relative;
+  padding: 0 1em;
+}
+
+.card_front .card-symbol {    
+  font-size: 15em;  
+}
+
+
+
+.card_back {
+/*   display: none; */
+  padding: 1em;
+}
+
+.card_front > *,
+.card_back > * {
+  background-color: white;
+  background-color: rgba(255, 255, 255, 0.75);  
+}
+
+.card-text {
+  padding: 0 4.5em 1em;
+  line-height: 1.4;
+}
+
+p:first-of-type {    
+  margin-top: 0;
+  padding: 1.5em 0 0;
+  border-top: 8px solid #333;
+}
+
+/* FLIP CARD STYLING */
+.container {
+  perspective: 1000px;
+}
+
+.container:hover .card, 
+.container.hover {
+  transform: rotateY(-180deg);
+}
+
+.card {
+  transition: 0.6s;
   transform-style: preserve-3d;
+  position: relative;
 }
 
-/* Do an horizontal flip when you move the mouse over the flip box container */
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-/* Position the front and back side */
-.flip-card-front, .flip-card-back {
+.card_front,
+.card_back {
+  backface-visibility: hidden;
   position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden; /* Safari */
+  top: 0;
+  left: 0;
 }
 
-/* Style the front side (fallback if image is missing) */
-.flip-card-front {
-  background-color: #bbb;
-  color: black;
+.card_front {
+  z-index: 2;
+  transform: rotateY(0deg);
 }
 
-/* Style the back side */
-.flip-card-back {
-  background-color: dodgerblue;
-  color: white;
-  transform: rotateY(180deg);
+.card_back {
+  transform: rotateY(-180deg);
 }
