--- a/style.css
+++ b/style.css
@@ -1,55 +1,62 @@
-@import 'https://fonts.googleapis.com/css?family=Lily+Script+One';
-body {
-  background: #eee;
-  font-family: 'Lily Script One';
+@font-face {
+  font-family: 'cervanttisregular';
+  src: url('cervanttis-webfont.woff2') format('woff2'),
+       url('cervanttis-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
-
-.card {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 300px;
-  height: 300px;
-  margin: -150px;
-  float: left;
-  perspective: 500px;
+.happy-birthday {
+  text-align: center;
+  color: pink;
+  font-family: 'cervanttisregular', sans-serif;
 }
-
-.content {
-  position: absolute;
+.flip-card {
+  text-align: center;
   width: 100%;
-  height: 100%;
-  box-shadow: 0 0 15px rgba(0,0,0,0.1);
-
-  transition: transform 1s;
+  margin: 0px auto;
+}
+@media (min-width: 576px) {
+  .flip-card {
+    width: 540px;
+  }
+}
+@media (min-width: 768px) {
+  .flip-card {
+    width: 730px;
+  }
+}
+@media (min-width: 992px) {
+  .flip-card {
+    width: 960px;
+  }
+}
+.flip-card-inner {
+  position: relative;
+  transition: transform 1.0s;
   transform-style: preserve-3d;
 }
-
-.card:hover .content {
-  transform: rotateY( 180deg ) ;
-  transition: transform 0.5s;
-}
-
-.front,
-.back {
-  position: absolute;
-  height: 100%;
+.flip-card-inner img {
+  vertical-align: middle;
   width: 100%;
-  background: white;
-  line-height: 300px;
-  color: #03446A;
-  text-align: center;
-  font-size: 60px;
-  border-radius: 5px;
+  height: auto;
+  border: 0;
+}
+.flip-card-back {
+  transform: rotateY(180deg);
+  z-index: 1;
+}
+.card-side-shadow {
+  opacity: 1;
+}
+.flip-card-back,
+.flip-card-front,
+.card-side-shadow {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
-
-.back {
-  background: #03446A;
-  color: white;
-  transform: rotateY( 180deg );
-}
-.card.flip .card--front {
-    transition-delay: 0.3s;
-    visibility: hidden;
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
 }
