--- a/style.css
+++ b/style.css
@@ -1,62 +1,48 @@
-@font-face {
-  font-family: 'cervanttisregular';
-  src: url('cervanttis-webfont.woff2') format('woff2'),
-       url('cervanttis-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-.happy-birthday {
-  text-align: center;
-  color: pink;
-  font-family: 'cervanttisregular', sans-serif;
-}
+/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .flip-card {
-  text-align: center;
-  width: 100%;
-  margin: 0px auto;
+  background-color: transparent;
+  width: 300px;
+  height: 200px;
+  border: 1px solid #f1f1f1;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
 }
-@media (min-width: 576px) {
-  .flip-card {
-    width: 540px;
-  }
-}
-@media (min-width: 768px) {
-  .flip-card {
-    width: 730px;
-  }
-}
-@media (min-width: 992px) {
-  .flip-card {
-    width: 960px;
-  }
-}
+.card.flip .card--front {
+    transition-delay: 0.3s;
+    visibility: hidden;
+}  
+/* This container is needed to position the front and back side */
 .flip-card-inner {
   position: relative;
-  transition: transform 1.0s;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
   transform-style: preserve-3d;
 }
-.flip-card-inner img {
-  vertical-align: middle;
-  width: 100%;
-  height: auto;
-  border: 0;
-}
-.flip-card-back {
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
-  z-index: 1;
 }
-.card-side-shadow {
-  opacity: 1;
-}
-.flip-card-back,
-.flip-card-front,
-.card-side-shadow {
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-backface-visibility: hidden;
+  -webkit-backface-visibility: hidden; /* Safari */
   backface-visibility: hidden;
 }
-.flip-card:hover .flip-card-inner {
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+/* Style the back side */
+.flip-card-back {
+  background-color: dodgerblue;
+  color: white;
   transform: rotateY(180deg);
 }
