--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@
 .container .card .item img {
   width: 400px !important;
   height: 400px !important;
+     object-fit: cover;
 }
 .container .card .back-side {
   -webkit-transform: rotateY(0.5turn) !important;
