--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+body {
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  height: 100vh !important;
+  background: none !important;
+}
 .container {
   width: 1000px !important;
   display: flex !important;
