--- a/style.css
+++ b/style.css
@@ -1,7 +1,24 @@
+/* Code By Webdevtrick ( https://webdevtrick.com ) */
 body {
-  background: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: black;
+}
+
+.container {
+  width: 1000px;
+  display: flex;
+  justify-content: space-between;
+  -webkit-perspective: 800px;
+          perspective: 800px;
 }
 .container .card {
+  position: relative;
+  width: 240px;
+  height: 300px;
+  color: white;
   cursor: pointer;
   transition: 1s ease-in-out;
   -webkit-transform-style: preserve-3d;
@@ -12,15 +29,21 @@ body {
           transform: rotateY(0.5turn);
 }
 .container .card .item {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
   transition: 1s ease-in-out;
+  -webkit-box-reflect: below 0 linear-gradient(transparent, transparent, rgba(0, 0, 0, 0.4));
 }
 .container .card .item img {
-  width: 400px;
-  height: 400px;
+  width: 240px;
+  height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .container .card .back-side {
   -webkit-transform: rotateY(0.5turn);
