--- a/style.css
+++ b/style.css
@@ -1,39 +1,38 @@
 .container {
-  width: 1000px;
-  display: flex;
-  justify-content: space-between;
-  -webkit-perspective: 800px;
-          perspective: 800px;
+  width: 1000px !important;
+  display: flex !important;
+  justify-content: space-between !important;
+  -webkit-perspective: 800px !important;
+          perspective: 800px !important;
 }
 .container .card {
-  position: relative;
-  width: 400px;
-  height: 400px;
-  cursor: pointer;
-  transition: 1s ease-in-out;
-  -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
+  position: relative !important;
+  width: 400px !important;
+  height: 400px !important;
+  cursor: pointer !important;
+  transition: 1s ease-in-out !important;
+  -webkit-transform-style: preserve-3d !important;
+          transform-style: preserve-3d !important;
 }
 .container .card:hover {
-  -webkit-transform: rotateY(0.5turn);
-          transform: rotateY(0.5turn);
+  -webkit-transform: rotateY(0.5turn) !important;
+          transform: rotateY(0.5turn) !important;
 }
 .container .card .item {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
-  transition: 1s ease-in-out;
-  -webkit-box-reflect: below 0 linear-gradient(transparent, transparent, rgba(0, 0, 0, 0.4));
+  position: absolute !important;
+  top: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  height: 100% !important;
+  -webkit-backface-visibility: hidden !important;
+          backface-visibility: hidden !important;
+  transition: 1s ease-in-out !important;
 }
 .container .card .item img {
-  width: 400px;
-  height: 400px;
+  width: 400px !important;
+  height: 400px !important;
 }
 .container .card .back-side {
-  -webkit-transform: rotateY(0.5turn);
-          transform: rotateY(0.5turn);
+  -webkit-transform: rotateY(0.5turn) !important;
+          transform: rotateY(0.5turn) !important;
 }
