--- a/style.css
+++ b/style.css
@@ -1,47 +1,54 @@
-label {
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-    position: absolute;
-}
-
-.card {
+.flipping-card-item-wrapper{
+    perspective: 150rem;
     position: relative;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-    -webkit-transition: all 600ms;
-    transition: all 600ms;
-    z-index: 20;
+    width:   400px;
+    height:  400px;
+    margin: 1rem;
 }
 
-    .card div {
-        position: absolute;
-        text-align: center;
-        -webkit-backface-visibility: hidden;
-        backface-visibility: hidden;
+.flipping-card-item-side{
+    position: absolute;
+    top: 0;
+    left: 0;
+    backface-visibility: hidden;
+    margin:  1.5rem;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 .5rem .5rem rgba(0, 0, 0, 0.18);
+    transition: all 1s;
+}
+
+
+.flipping-card-item-side-back{
+    transform: rotateY(180deg);
+}
+
+
+.flipping-card-item-wrapper:hover .flipping-card-item-side-front{
+    transform: rotateY(-180deg);
+}
+
+.flipping-card-item-wrapper:hover .flipping-card-item-side-back{
+    transform: rotateY(0);
+}
+
+.flipping-card-item-img{
+    width: 100%;
+    height: 100%;
+    background-size: cover;
     }
 
-    .card .back {
-        -webkit-transform: rotateX(180deg);
-        transform: rotateX(180deg);
-    }
-
-label:hover .card {
-    -webkit-transform: rotateX(20deg);
-    transform: rotateX(20deg);
-    box-shadow: 0 20px 20px rgba(50,50,50,.2);
+.flipping-card-back-wrapper{
+    font-weight: 200;
+    position: relative;
+    text-align: center;
 }
 
-input {
-    display: none;
+.flipping-card-back-wrapper__btn {
+    border: 0;
+    transition: all .5s;
 }
 
-:checked + .card {
-    transform: rotateX(180deg);
-    -webkit-transform: rotateX(180deg);
-}
-
-label:hover :checked + .card {
-    transform: rotateX(160deg);
-    -webkit-transform: rotateX(160deg);
-    box-shadow: 0 20px 20px rgba(255,255,255,.2);
+.flipping-card-back-wrapper__btn:hover {
+    background-image: none;
 }
