--- a/style.css
+++ b/style.css
@@ -1,46 +1,55 @@
-.flipping-card-item-wrapper{
-    perspective: 150rem;
+.panel {
+    width: 800px;
+    height: 800px;
+    margin: auto;
     position: relative;
-    width:   1000px;
-    height:  1000px;
 }
 
-.flipping-card-item-side{
-    position: absolute;
-    backface-visibility: hidden;
+.card {
     width: 100%;
     height: 100%;
-    box-shadow: 0 .5rem .5rem rgba(0, 0, 0, 0.18);
-    transition: all 1s;
+    -o-transition: all .5s;
+    -ms-transition: all .5s;
+    -moz-transition: all .5s;
+    -webkit-transition: all .5s;
+    transition: all .5s;
+    -webkit-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0px;
+    left: 0px;
 }
 
+.front {
+    z-index: 2;
+    background-image: url(https://i.imgur.com/09hDm4V.png);
+    background-size: 800px 800px;
+}
 
-.flipping-card-item-side-back{
+.back {
+    z-index: 1;
+    -webkit-transform: rotateY(-180deg);
+    -ms-transform: rotateY(-180deg);
+    -moz-transform: rotateY(-180deg);  
+    transform: rotateY(-180deg);  
+    background-image: url(https://i.imgur.com/gmhzajV.png);
+    background-size: 800px 800px;
+}
+
+.panel:hover .front {
+    z-index: 1;
+    -webkit-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
     transform: rotateY(180deg);
 }
 
-
-.flipping-card-item-wrapper:hover .flipping-card-item-side-front{
-    transform: rotateY(-180deg);
-}
-
-.flipping-card-item-wrapper:hover .flipping-card-item-side-back{
-    transform: rotateY(0);
-}
-
-.flipping-card-item-img{
-    width: 100%;
-    height: 100%;
-    }
-
-.flipping-card-back-wrapper{
-    position: relative;
-}
-
-.flipping-card-back-wrapper__btn {
-    transition: all .5s;
-}
-
-.flipping-card-back-wrapper__btn:hover {
-    background-image: none;
+.panel:hover .back {
+    z-index: 2;   
+    -webkit-transform: rotateY(0deg);
+    -ms-transform: rotateY(0deg);
+    -moz-transform: rotateY(0deg);
+    transform: rotateY(0deg);
 }
