--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
 
 .front {
     z-index: 2;
+    background-color: none !important;
     background-image: url(https://i.imgur.com/09hDm4V.png) !important;
     background-size: 800px 800px;
 }
@@ -34,6 +35,7 @@
     -ms-transform: rotateY(-180deg);
     -moz-transform: rotateY(-180deg);  
     transform: rotateY(-180deg);  
+    background-color: none !important;
     background-image: url(https://i.imgur.com/gmhzajV.png) !important;
     background-size: 800px 800px;
 }
