--- a/style.css
+++ b/style.css
@@ -21,14 +21,14 @@
     top: 0px;
     left: 0px;
 }
-
+   --ackground-image: url(https://i.imgur.com/09hDm4V.png) !important;
 .front {
     z-index: 2;
     background-color: none !important;
     background-image: url(https://i.imgur.com/09hDm4V.png) !important;
     background-size: 800px 800px;
 }
-
+--    background-image: url(https://i.imgur.com/gmhzajV.png) !important;
 .back {
     z-index: 1;
     -webkit-transform: rotateY(-180deg);
@@ -36,7 +36,6 @@
     -moz-transform: rotateY(-180deg);  
     transform: rotateY(-180deg);  
     background-color: none !important;
-    background-image: url(https://i.imgur.com/gmhzajV.png) !important;
     background-size: 800px 800px;
 }
 
