--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
     top: 0px;
     left: 0px;
 }
-   --ackground-image: url(https://i.imgur.com/09hDm4V.png) !important;
+   --background-image: url(https://i.imgur.com/09hDm4V.png) !important;
 .front {
     z-index: 2;
     background-color: none !important;
