--- a/style.css
+++ b/style.css
@@ -26,6 +26,10 @@
     z-index: 2;
     background-image: url(https://i.imgur.com/09hDm4V.png) !important;
     background-size: 800px 800px;
+    img {
+    width: 200px;
+    height: 300px;
+    object-fit: none;
 }
 
 .back {
@@ -34,8 +38,10 @@
     -ms-transform: rotateY(-180deg);
     -moz-transform: rotateY(-180deg);  
     transform: rotateY(-180deg);  
-    background-image: url(https://i.imgur.com/gmhzajV.png) !important;
-    background-size: 800px 800px;
+    img {
+    width: 200px;
+    height: 300px;
+    object-fit: none;
 }
 
 .panel:hover .front {
