--- a/style.css
+++ b/style.css
@@ -44,6 +44,8 @@
     -ms-transform: rotateY(180deg);
     -moz-transform: rotateY(180deg);
     transform: rotateY(180deg);
+    border: none !important;
+    outline: none !important;
 }
 
 .panel:hover .back {
@@ -52,6 +54,8 @@
     -ms-transform: rotateY(0deg);
     -moz-transform: rotateY(0deg);
     transform: rotateY(0deg);
+    border: none !important;
+    outline: none !important;
 }
 
 fieldset {
