--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 }
 
 .card {
-    width: 100%;
-    height: 100%;
+    width: 631px;
+    height: 1323px;
     -o-transition: all .5s;
     -ms-transition: all .5s;
     -moz-transition: all .5s;
